# expense-manager

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
expense/: admin.py  models.py  serializers.py  urls.py  views.py
expense/migrations/: 0001_initial.py
settings/: settings.py  urls.py
